cmd/internal/generator/testdata/validation/52_slice_out.go
// DO NOT EDIT. This file was generated by "github.com/frk/valid".

package testdata

import (
	"errors"

	"github.com/frk/valid"
)

func (v T52Validator) Validate() error {
	for _, e1 := range v.F1 {
		if !valid.Email(e1) {
			return errors.New("F1 must be a valid email address")
		}
	}
	if v.F2 != nil && *v.F2 != nil && **v.F2 != nil {
		for _, e1 := range ***v.F2 {
			if !valid.Email(e1) {
				return errors.New("F2 must be a valid email address")
			}
		}
	}
	if v.F3 != nil {
		for _, e1 := range *v.F3 {
			if e1 == nil || *e1 == "" {
				return errors.New("F3 is required")
			} else if !valid.Email(*e1) {
				return errors.New("F3 must be a valid email address")
			}
		}
	}
	return nil
}
